# corex_payment

./: Cargo.toml
examples/: dc.rs  main.rs  shift.rs
src/: README.md  lib.rs
src/acquiring/: mod.rs  terminal.rs
src/acquiring/commands/: base.rs  mod.rs  payment.rs  refund.rs  totals.rs
src/acquiring/connection/: base.rs  inpas.rs  mod.rs  tcp.rs  usb.rs
src/acquiring/protocol/: buffer.rs  inpas.rs  mod.rs  tlv.rs
src/acquiring/response/: mod.rs  normalize.rs
src/acquiring/types/: mod.rs  protocol.rs
src/kkt/: mod.rs  types.rs
