[package]
name = "corex_payment"
version = "0.1.0"
edition = "2024"
authors = ["justjew <justjew1406@gmail.com>"]
license = "MIT"
description = "A library for fiscalization and acquiring operations"
# repository = "https://github.com/ryansonshine/typescript-npm-package-template"

[lib]
name = "corex_payment"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-serial = "5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
encoding_rs = "0.8"
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
async-trait = "0.1"
regex = "1.10"
chrono = "0.4"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

